--- a/config.yaml
+++ b/config.yaml
@@ -5,5 +5,4 @@ services:
     expectedJson:
       database: green
       health: green
-gotifyToken: <token>
-gotifyHost: 192.168.0.151:6060
+gotifyHost: http://192.168.0.151:6060
